# mobile_hdemg_exo

./: .gitignore  CMakeLists.txt  README.md
h3_config_controller/: CMakeLists.txt
h3_config_controller/include/h3_config_controller/: h3_config_controller.h
h3_control_client/: package.xml
h3_control_client/config/: h3_effort_position_controllers.yaml  h3_stiffness_controller.yaml
h3_control_client/launch/: h3_group_position_controller.launch  h3_open_loop_controller.launch  h3_stiffness_controllers.launch  h3_task_controller.launch
h3_hardware_interface/: CMakeLists.txt
h3_hardware_interface/config/: h3_hardware.yaml
h3_hardware_interface/include/h3_hardware_interface/: h3_command_interface.h  h3_definition.h  h3_hardware_interface.h  stiffness_joint_interface.h
h3_hardware_interface/src/: h3_hardware_interface_node.cpp
h3_launch/launch/: h3_launch_torque_control.launch
h3_packages/h3_config_controller/: controller_plugin.xml  package.xml
h3_packages/h3_config_controller/src/: h3_config_controller.cpp
h3_packages/h3_control_client/: CMakeLists.txt
h3_packages/h3_control_client/config/: h3_group_position_controller.yaml  h3_monitoring_controller.yaml  h3_open_loop_controllers.yaml  h3_position_controllers.yaml  h3_task_controller.yaml  h3_torque_controllers.yaml
h3_packages/h3_control_client/launch/: h3_effort_position_control_client.launch  h3_launch_torque.launch  h3_monitoring_controller.launch  h3_position_controllers.launch  h3_torque_controllers.launch
h3_packages/h3_hardware_interface/: CMakeLists.txt  package.xml
h3_packages/h3_hardware_interface/include/h3_hardware_interface/: h3_handle.h  h3_logger.h  h3_state_interface.h
h3_packages/h3_hardware_interface/launch/: h3_hardware_interface.launch
h3_packages/h3_hardware_interface/src/: h3_handle.cpp  h3_hardware_interface.cpp  h3_logger.cpp
h3_packages/h3_indicator/: CMakeLists.txt  package.xml
h3_packages/h3_indicator/launch/: h3_indicators.launch
h3_packages/h3_indicator/scripts/: h3_indicator_node.py
h3_packages/h3_robot_state_controller/: CMakeLists.txt
h3_packages/h3_robot_state_controller/src/: h3_robot_state_controller.cpp
h3_packages/h3_task_controller/: package.xml  task_controller_plugin.xml
h3_packages/h3_task_controller/include/h3_task_controller/: h3_task_controller.h
h3_packages/joint_stiffness_controller/include/joint_stiffness_controller/: joint_stiffness_controller.h
h3_packages/joint_stiffness_controller/src/: joint_stiffness_controller.cpp
h3_robot_state_controller/: controller_plugin.xml  package.xml
h3_robot_state_controller/include/h3_robot_state_controller/: h3_robot_state_controller.h
h3_task_controller/: CMakeLists.txt
h3_task_controller/src/: h3_task_controller.cpp
joint_stiffness_controller/: CMakeLists.txt  joint_stiffness_controller_plugin.xml  package.xml
latency_analyzer/nodes/: latency_analyzer.py
mobile_hdEMG_exo/: CMakeLists.txt  package.xml  setup.py
mobile_hdEMG_exo/launch/: h3_launch.launch
mobile_hdEMG_exo/nodes/: calibrate_node.py  emg_stream_node.py  torque_output_node.py
mobile_hdEMG_exo/src/mobile_hdEMG_exo/: qc_predict.py
mobile_hdEMG_exo/src/mobile_hdEMG_exo/calibration/: calibrator.py  trajectory_generator.py  trial_runner.py
mobile_hdEMG_exo/src/mobile_hdEMG_exo/processors/: emg_process_cst.py
mobile_hdEMG_exo/src/mobile_hdEMG_exo/qc/: qc_communication.py  qc_connect_config.py
mobile_hdEMG_exo/src/mobile_hdEMG_exo/streamer/: emg_qc_streamer.py  torque_file_streamer.py
mobile_hdEMG_exo/src/mobile_hdEMG_exo/utils/: torque_smoother.py
mobile_hdEMG_exo/src/talker_listener/calibration/: calibrator.py  trajectory_generator.py  trial_runner.py
mobile_hdemg_exo/: CMakeLists.txt  package.xml  requirements.txt
mobile_hdemg_exo/calibration/: trial_runner.py
mobile_hdemg_exo/launch/: emg_minimal.launch  h3_launch.launch
mobile_hdemg_exo/nodes/: calibrate_node.py  emg_processor_node.py  emg_stream_node.py  emg_visualizer_node.py  realtime_plotter.py  simulated_device_pub.py  startupGUI.py  startup_gui_node.py  torque_output_node.py  trial_gui_node.py
mobile_hdemg_exo/processors/: emg_process_cst.py
mobile_hdemg_exo/src/mobile_hdEMG_exo/: qc_predict.py
mobile_hdemg_exo/src/mobile_hdEMG_exo/qc/: qc_connect_config.py
mobile_hdemg_exo/src/mobile_hdEMG_exo/streamer/: emg_muovi_streamer.py
mobile_hdemg_exo/src/mobile_hdEMG_exo/utils/: torque_smoother.py
mobile_hdemg_exo/src/mobile_hdemg_exo/calibration/: trial_runner.py
mobile_hdemg_exo/src/mobile_hdemg_exo/model/: cst_test.py  emg_process_cst.py  qc_predict.py
mobile_hdemg_exo/src/mobile_hdemg_exo/processors/: emg_process_cst.py
mobile_hdemg_exo/src/mobile_hdemg_exo/streamer/: emg_muovi_streamer.py
mobile_hdemg_exo/src/mobile_hdemg_exo/utils/: array_snapshot.py  moving_average.py  rospy_countdown.py  rqt_multiplot.xml  rqt_multiplot_processed.xml
mobile_hdemg_exo/streamer/: emg_qc_streamer.py
talker_listener/: CMakeLists.txt
talker_listener/data/: EMG_plotter.py  EMG_reader.py  echo_raw_data.csv  pwm_output.csv  raw_emg.csv
talker_listener/launch/: h3_launch.launch
talker_listener/nodes/: QC_node_cst.py  QC_node_emg.py  calibrate_cst.py  calibrate_emg.py  calibrate_node.py  emg_stream.py  emg_stream_node.py  latency_analyzer.py  muovi_connect.py  patient_instruction_gui.py  qc_stream_node.py  qc_stream_node_100.py  qc_stream_node_512.py  startupGUI.py  torque_output_node.py  torque_stream.py  torque_stream_node.py
talker_listener/src/talker_listener/: emg_process_cst.py  emg_process_rms.py  hdEMG_DCNN.py  latency_analyzer_plotter.py  listener.py  moving_window.py  pwm_output.csv  qc_communication.py  qc_connect.py  qc_connect_config.py  qc_predict.py  qc_stream.py  raw_emg.csv  talker.py  test_data_EMG.csv
talker_listener/src/talker_listener/calibration/: trial_runner.py
talker_listener/src/talker_listener/processors/: emg_process_cst.py  emg_process_rms.py
talker_listener/src/talker_listener/qc/: qc_communication.py  qc_connect_config.py
talker_listener/src/talker_listener/streamer/: emg_file_streamer.py  (+2 more)
(+4 files in other folders)
