<?xml version="1.0"?>
<package format="2">
  <name>h3_config_controller</name>
  <version>0.0.1</version>
  
  <description>Exo-H3 Configuration controller plugin</description>

  <maintainer email="support@technaid.com">Support Team</maintainer>
  <license>LGPL 2.1</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>h3_hardware_interface</build_depend>
  <build_depend>h3_msgs</build_depend>

  <build_export_depend>controller_interface</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>h3_hardware_interface</build_export_depend>
  <build_export_depend>h3_msgs</build_export_depend>
  
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>h3_hardware_interface</exec_depend>
  <exec_depend>h3_msgs</exec_depend>

  <export>
  <controller_interface plugin="${prefix}/controller_plugin.xml"/>
  </export>

</package>
